Dummy_Package_for_scratch_org/main/default/objects/Copado_Smart_Help__mdt/fields/Base_Page__c.field-meta.xml
<CustomField>
    <fullName>Base_Page__c</fullName>
    <label>Base Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GitCommitMain</fullName>
                <default>true</default>
                <label>GitCommitMain</label>
            </value>
            <value>
                <fullName>GitCommitChanges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>