Dummy_Package_for_scratch_org/main/default/objects/Copado_Smart_Help__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <inlineHelpText>This is the text that will appear in the Tip pop-up message. Try to be assertive and clear with your tip.</inlineHelpText>
    <label>Help Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>