Dummy_Package_for_scratch_org/main/default/objects/Copado_Smart_Help__mdt/fields/Triggering_Action__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Action__c</fullName>
    <inlineHelpText>Select if you want the tip to be display immediately or only when the triggering action is met</inlineHelpText>
    <label>Triggering Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copado Metadata Grid selection</fullName>
                <default>true</default>
                <label>Copado Metadata Grid selection</label>
            </value>
            <value>
                <fullName>Always show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>