Dummy_Package_for_scratch_org/main/default/objects/Copado_Smart_Help__mdt/fields/Triggering_Metadata_Items__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Metadata_Items__c</fullName>
    <inlineHelpText>This is a non-mandatory field. You can use it to complement the Triggering Metadata Type in case you want specific Metadata items to trigger the tips. The Metadata items can be separated by &quot;;&quot;. Example standard-Account;standard-AppLauncher.</inlineHelpText>
    <label>Triggering Metadata Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>