Dummy_Package_for_scratch_org/main/default/objects/Copado_Smart_Help__mdt/fields/Triggering_Value__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Value__c</fullName>
    <inlineHelpText>Specify the Metadata Type that will trigger the tip to be displayed</inlineHelpText>
    <label>Triggering Metadata Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>