Dummy_Package_for_scratch_org/main/default/objects/Copado_Smart_Help__mdt/validationRules/Validate_triggering_metadata_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_triggering_metadata_type</fullName>
    <active>true</active>
    <description>Triggering Metadata Items should not be populated in case Triggering Metadata Type is blank</description>
    <errorConditionFormula>AND(
  NOT( ISBLANK( Triggering_Metadata_Items__c ) ),
  ISBLANK( Triggering_Value__c )  
)</errorConditionFormula>
    <errorDisplayField>Triggering_Value__c</errorDisplayField>
    <errorMessage>Please enter Triggering Metadata Type to populate Triggering Metadata Items</errorMessage>
</ValidationRule>